# computer_graphics

./: CMakeLists.txt  README.md  compile_commands.json  main.cpp
first_task/: CMakeLists.txt
include/: main.hpp  mesh.hpp  model.hpp  object.h  shader.hpp  vulkan.hpp
models/sphere/: 3d-model.mtl  uploads_files_1907482_Vraymatsfree.mtl
shaders/: comp.spv  fshader.fs  shader.comp
src/: main.cpp  main1.cpp  model.cpp  shader.cpp
